<resources>
    <string name="app_name">快递助手</string>
    <string name="activity_today">快递助手</string>
    <string name="activity_plan_result">今日配送</string>
    <string name="activity_my_list">我的订单</string>
    <string name="activity_completed_order">配送历史</string>
    <string name="menu_item_more">更多</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_plan">开始规划</string>
    <string name="today_order">今日订单</string>
    <string name="hint_courierId">请输入您的快递员ID</string>
    <string name="current_order">正在配送的订单</string>
    <string name="order_id">订单编号：</string>
    <string name="contacts">联系方式：</string>
    <string name="address">送货地址：</string>
    <string name="estimation">预计到达：</string>
    <string name="failure">配送失败</string>
    <string name="done">确认送达</string>
    <string name="other_user">普通用户请点这里</string>
    <string name="sending">正在配送的订单</string>
    <string name="waiting">即将配送的订单</string>
    <string name="uninformed">未短信通知订单</string>
    <string name="failed">配送失败的订单</string>
    <string name="completed">配送完成的订单</string>
    <string name="detail_order">订单详情</string>
    <string name="reservation">预约时间：</string>
    <string name="header_title">title</string>
    <string name="header_sub_title">sub_title</string>
    <string name="footer_title">footer title</string>
    <string name="footer_button_confirm">确定</string>
    <string name="footer_button_close">关闭</string>
    <string name="detail_header_title">订单详情</string>
    <string name="failed_title">配送失败</string>
    <string name="failed_sub_title">请选择失败原因</string>
    <string name="vip_rank">VIP等级：%s</string>
    <string name="completion_status">状态：%s</string>
    <string name="done_header_title">确认送达</string>

    <string name="failed_reason_1">收货人临时有事</string>
    <string name="failed_reason_2">收货人拒签</string>
    <string name="failed_reason_3">联系不上收货人</string>
    <string name="failed_reason_4">失败原因4</string>
    <string name="failed_reason_5">失败原因5</string>
    <string name="failed_reason_other">其他原因</string>
    <string name="gender">性别</string>
    <string name="phone">联系电话</string>
    <string name="arrive_time">送达时间：</string>
    <string name="estimated_waiting_time">预计等待时间：</string>
    <string name="orderIDTitle">订单号：</string>
    <string name="addressTitle">目标地址：</string>
    <string name="title_activity_main">快递助手</string>
    <string name="title_activity_login">快递员登录</string>
    <string name="title_activity_customer_login">用户登录</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名(快递员ID)</string>
    <string name="prompt_phone">手机号码</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">输入密码过短</string>
    <string name="error_incorrect_password">输入密码错误</string>
    <string name="error_field_required">该项不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="gt"><![CDATA[>]]></string>
    <string name="title_contact_map">%1$s %2$s</string>
    <string name="title_address_map">送货地址: %s</string>
    <string name="title_arrive_map">预计到达: %s</string>
    <string name="title_wait_map">预计等待: %s 秒</string>

    <string name="snackbar_address_start">"正在规划导航路径，请稍等…"</string>
    <string name="snackbar_address">"导航路径规划完毕. "</string>
    <string name="failure_reason">失败原因：</string>
    <string name="dialog_done_confirm">确认成功配送到收货人%s手中？</string>
    <string name="dialog_done_time">当前时间：%s</string>
</resources>
