<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/order_id"
        android:id="@+id/tvOrderIdTitle"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="1251763094451085"
        android:id="@+id/tvOrderId"
        android:layout_alignTop="@+id/tvOrderIdTitle"
        android:layout_toRightOf="@+id/tvOrderIdTitle"
        android:layout_toEndOf="@+id/tvOrderIdTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/contacts"
        android:id="@+id/tvContactsTitle"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/tvOrderId"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="江天源"
        android:id="@+id/tvName"
        android:layout_alignTop="@+id/tvContactsTitle"
        android:layout_toRightOf="@+id/tvContactsTitle"
        android:layout_toEndOf="@+id/tvContactsTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/address"
        android:id="@+id/tvAddressTitle"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/tvName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="北京市 海淀区 颐和园路5号 燕园街道 北京大学理科一号楼1616"
        android:id="@+id/tvAddress"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_alignTop="@+id/tvAddressTitle"
        android:layout_toRightOf="@+id/tvAddressTitle"
        android:layout_toEndOf="@+id/tvAddressTitle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reservation"
        android:id="@+id/tvReservationTitle"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_below="@+id/tvAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="09:00"
        android:id="@+id/tvRes1"
        android:layout_alignTop="@+id/tvReservationTitle"
        android:layout_toRightOf="@+id/tvReservationTitle"
        android:layout_toEndOf="@+id/tvReservationTitle" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="  -  "
        android:id="@+id/textView"
        android:layout_toRightOf="@+id/tvRes1"
        android:layout_toEndOf="@+id/tvRes1"
        android:layout_alignTop="@+id/tvRes1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="09:30"
        android:id="@+id/tvRes2"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/gender"
        android:id="@+id/tvGender"
        android:layout_marginLeft="6sp"
        android:layout_marginStart="6sp"
        android:layout_alignTop="@+id/tvName"
        android:layout_toRightOf="@+id/tvName"
        android:layout_toEndOf="@+id/tvName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/phone"
        android:id="@+id/tvPhone"
        android:layout_marginLeft="6sp"
        android:layout_marginStart="6sp"
        android:layout_alignTop="@+id/tvGender"
        android:layout_toRightOf="@+id/tvGender"
        android:layout_toEndOf="@+id/tvGender" />
</RelativeLayout>