<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/windowBackground"
    tools:context="edu.sei.eecs.pku.hermes.TodayActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/inputCourierId"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:singleLine="true"
        android:hint="@string/hint_courierId"
        android:layout_toStartOf="@+id/buttonConfirm"
        android:layout_toLeftOf="@+id/buttonConfirm" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:id="@+id/buttonConfirm"
        android:layout_alignTop="@+id/inputCourierId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardToday"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonConfirm"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@android:color/white"
        card_view:cardCornerRadius="4dp"
        android:visibility="invisible">

        <RelativeLayout
            android:id="@+id/layoutToday"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/today_order"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_plan"
                android:id="@+id/buttonPlan"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

            <ListView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/todayList"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/buttonPlan"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
